--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
                                 </div>
                             </div>
                         </div>
+                         <!-- Side Navigation Arrows - YE ADD KARO -->
+    <button class="side-nav-arrow prev" id="sideNavPrev" onclick="slideLeft()"><img src="/icons/arrow-left.png" alt="arrow left" srcset=""></button>
+    <button class="side-nav-arrow next" id="sideNavNext" onclick="slideRight()"><img src="/icons/arrow-right.png" alt="side right" srcset=""></button>
                     </div>
 
 
